<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.studentinternationalconnect.presentation.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/loginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textColor="#0057ff"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/loginIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTV"
            app:srcCompat="@drawable/logo_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginIV">

            <TextView
                android:id="@+id/loginErrorTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:text="@{loginViewModel.errorMessage}"
                android:paddingStart="3dp"
                android:textColor="@color/red"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/userNameET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColorHint="#464646" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColorHint="#464646" />

            <TextView
                android:id="@+id/forgotPasswordTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <!--        <LinearLayout-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="match_parent"-->
            <!--            android:layout_marginTop="8dp"-->
            <!--            android:layout_marginBottom="8dp"-->
            <!--            android:orientation="horizontal">-->

            <!--            <ImageView-->
            <!--                android:id="@+id/imageView4"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                app:srcCompat="@drawable/twitter" />-->

            <!--            <ImageView-->
            <!--                android:id="@+id/imageView3"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                app:srcCompat="@drawable/google" />-->

            <!--            <ImageView-->
            <!--                android:id="@+id/imageView2"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                app:srcCompat="@drawable/facebook" />-->
            <!--        </LinearLayout>-->

            <Button
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background"
                android:text="@string/login_btn"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signUpTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/create_new_account"
                android:textAlignment="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:focusable="true" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>